Bug 166996 - Switching from tabbed to standard toolbar UI crashes in debug build
Summary: Switching from tabbed to standard toolbar UI crashes in debug build
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-13 15:16 UTC by Mike Kaganski
Modified: 2025-06-18 08:01 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-06-13 15:16:17 UTC
1. Switch to tabbed UI for Writer. Reboot.
2. Open Writer, and use its hamburger menu to call User Interface element.
3. In the dialog, select Standard Toolbar, and press Apply to Writer

=> in a debug build of current master, this crashes (at least on Windows).

The problem is the menu that popped up from the hamburger menu. It doesn't close until the command completes -> crashes, when the hamburger menu tries to destroy, and finds out that it has live children.
Comment 1 Roman Kuznetsov 2025-06-13 17:12:23 UTC
https://gerrit.libreoffice.org/c/core/+/186470
Comment 2 Commit Notification 2025-06-14 06:42:18 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e931c4e9399ba96054ed153204627579242a5cc6

tdf#166996: handle menu commands asynchronously

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-18 08:01:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/f05e8170d288d1fd2c801c4b62154ee95d3f6df3

tdf#166996: handle menu commands asynchronously

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.