tdf#166996: handle menu commands asynchronously

Instead of doing that command by command, this change tries to do it
globally, posting user event with the command data; it will run when
event loop gets to it; the menu gets closed by that time.

Change-Id: Ifdea666be8557a576dd6cd934898343631a3a95e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186470
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>